--- a/src/index.html
+++ b/src/index.html
@@ -97,7 +97,6 @@
             </div>
         </div>
 
-        <script src="./calculator.js"></script>
-        <script src="./app.js"></script>
+        <script src="./bundle.js"></script>
     </body>
 </html>
