replaced division sign

--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
                 <div class="col">
                     <div class="row">
                         <div class="col">
-                            <button type="button" class="btn" data-input="/">&#43;</button>
+                            <button type="button" class="btn" data-input="/">/</button>
                         </div>
                         <div class="col">
                             <button type="button" class="btn" data-input="*">x</button>
